continue refactor prototype.html

--- a/prototype.html
+++ b/prototype.html
@@ -47,198 +47,176 @@
       </div>
     </div> <!-- .navbar-toggle / hamburger menu -->
 
-  <nav class="fp-nav-wrapper flex is-row justify-start">
-
-    <div class="menu-container flex is-row">
-
-      <div class="nav-content is-half">
-        <ul class="menu-list-items">
-          <li data-menuanchor="home" class="active"><a href="./#home">rayfinn</a></li>
-          <li data-menuanchor="about-me"><a href="./#about-me">about</a></li>
-          <li data-menuanchor="prototype"><a href="./#prototype">prototype</a></li>
-          <li data-menuanchor="interaction"><a href="./#interaction">interaction</a></li>
-          <li data-menuanchor="photography"><a href="./#photography">photography</a></li>
-        </ul>
+    <nav class="fp-nav-wrapper flex is-row justify-start">
+      <div class="menu-container flex is-row">
+        <div class="nav-content is-half">
+          <ul class="menu-list-items">
+            <li data-menuanchor="home" class="active"><a href="./#home">rayfinn</a></li>
+            <li data-menuanchor="about-me"><a href="./#about-me">about</a></li>
+            <li data-menuanchor="prototype"><a href="./#prototype">prototype</a></li>
+            <li data-menuanchor="interaction"><a href="./#interaction">interaction</a></li>
+            <li data-menuanchor="photography"><a href="./#photography">photography</a></li>
+          </ul>
+        </div>
+        <aside class="nav-content-text flex is-half justify-center">
+          <p>Hello and welcome to my website. Im an interactive designer and front end developer based in Wellington whah whah</p>
+        </aside>
       </div>
-
-      <aside class="nav-content-text flex is-half justify-center">
-        <p>Hello and welcome to my website. Im an interactive designer and front end developer based in Wellington whah whah</p>
-      </aside>
-
-    </div>
-  </nav> <!-- .fp-nav-wrapper -->
- </div> <!-- .main-header & navigation -->
+    </nav> <!-- .fp-nav-wrapper -->
+    
+  </div> <!-- .main-header & navigation -->
 
   <main class="prototype-main-wrapper">
 
-  <section class="prototype-intro-wrapper fullpage-section flex align-center justify-center">
-    <div class="section-container">
-      <div class="prototype-case-study flex is-row align-center space-between">
-        <article class="intro-text is-two-thirds">
-          <h1>Bird Nerd</h1>
-          <p><span>Y / </span>2016</p>
-          <p><span>TYPE / </span>Personal Project + Proof of concept</p>
-          <p><span>SERVICES / </span>UX/UI + PROTOTYPE</p>
-          <div class="rect-line"></div>
-          <p class="prototype-body-text">
-            Young leaders is a programme sponsored by the Ministry of Primary Industries. It encourages internal staff to submit ideas in areas of technology and design. Bird Nerd  was an idea pitched by a small team. The small team need some concepts and prototypes to pitch. 
-          </p>
-        </article>  
-        <div class="welcome-iphone">
-          <img src="img/loading-iphone.png" alt="welcome page of Bird Nerd app">
-        </div>
-      </div> 
-    </div>
-  </section> <!-- .prototype-intro-wrapper -->
-
-  <section class="process flex align-center">
-    <div class="process-container section-container flex is-row space-between align-center">
-      <article class="process-text is-half">
-        <h1>Process</h1>
-        <p>We talk to your team and consumers, research competitors and learn everything about the market. We then take your brand's unique position in the market and craft a story around it to enable awesome design.</p>
-      </article>
-    </div>
-  </section> <!-- .process -->
-
-  <section class="scope flex align-center">
-    <div class="scope-container section-container">
-      <article class="scope-text">
-        <h2>Scoping</h2>
-        <p>Using sound recognition technology, bird nerd is an app that helps users identify native New Zealand birds while out in the forest. Bird Nerd also allows users to tag and share their location and add birds to their personal collection. The app would generally be targeted towards bird enthusiast but also needed to appeal other target groups. The team at MPI needed a prototype to present to.</p>
-      </article>
-      <article class="client-sketches flex is-row">
-        <div>
-          <img src="img/assets/bird-nerd-1.jpg" alt="fill this out">
-        </div>
-        <div>
-          <img src="img/assets/bird-nerd-2.jpg" alt="fill this out">
-        </div>
-        <div>
-          <img src="img/assets/bird-nerd-3.jpg" alt="fill this out">
-        </div>
-        <div>
-          <img src="img/assets/bird-nerd-4.jpg" alt="fill this out">
-        </div>
-        <div>
-          <img src="img/assets/bird-nerd-5.jpg" alt="fill this out">
-        </div>
-    </article>
-        <h6>(Early sketches provided by team at MPI)</h6> 
-    </div>
-  </section> <!-- .scope -->
-
-
-
-
-    <section class="prototype-process flex align-center">
+    <section class="prototype-intro-wrapper fullpage-section flex align-center justify-center">
       <div class="section-container">
+        <div class="prototype-case-study flex is-row align-center space-between">
+          <article class="intro-text is-two-thirds">
+            <h1>Bird Nerd</h1>
+            <p><span>Y / </span>2016</p>
+            <p><span>TYPE / </span>Personal Project + Proof of concept</p>
+            <p><span>SERVICES / </span>UX/UI + PROTOTYPE</p>
+            <div class="rect-line"></div>
+            <p class="prototype-body-text">
+              Young leaders is a programme sponsored by the Ministry of Primary Industries. It encourages internal staff to submit ideas in areas of technology and design. Bird Nerd  was an idea pitched by a small team. The small team need some concepts and prototypes to pitch. 
+            </p>
+          </article>  
+          <div class="welcome-iphone">
+            <img src="img/loading-iphone.png" alt="welcome page of Bird Nerd app">
+          </div>
+        </div> 
+      </div>
+    </section> <!-- .prototype-intro-wrapper -->
 
-        <div class="scope">
-          <article class="scope-text">
-            <h2>Scoping</h2>
-            <p>Using sound recognition technology, bird nerd is an app that helps users identify native New Zealand birds while out in the forest. Bird Nerd also allows users to tag and share their location and add birds to their personal collection. The app would generally be targeted towards bird enthusiast but also needed to appeal other target groups. The team at MPI needed a prototype to present to.</p>
-          </article>
+    <section class="process flex align-center">
+      <div class="process-container section-container flex is-row space-between align-center">
+        <article class="process-text is-half">
+          <h1>Process</h1>
+          <p>We talk to your team and consumers, research competitors and learn everything about the market. We then take your brand's unique position in the market and craft a story around it to enable awesome design.</p>
+        </article>
+      </div>
+    </section> <!-- .process -->
 
-          <article class="client-sketches flex is-row">
-            <div>
-              <img src="img/assets/bird-nerd-1.jpg" alt="fill this out">
-            </div>
-            <div>
-              <img src="img/assets/bird-nerd-2.jpg" alt="fill this out">
-            </div>
-            <div>
-              <img src="img/assets/bird-nerd-3.jpg" alt="fill this out">
-            </div>
-            <div>
-              <img src="img/assets/bird-nerd-4.jpg" alt="fill this out">
-            </div>
-            <div>
-              <img src="img/assets/bird-nerd-5.jpg" alt="fill this out">
-            </div>
-          </article>
+    <section class="scope flex align-center">
+      <div class="scope-container section-container">
+        <article class="scope-text">
+          <h2>Scoping</h2>
+          <p>Using sound recognition technology, bird nerd is an app that helps users identify native New Zealand birds while out in the forest. Bird Nerd also allows users to tag and share their location and add birds to their personal collection. The app would generally be targeted towards bird enthusiast but also needed to appeal other target groups. The team at MPI needed a prototype to present to.</p>
+        </article>
+        <article class="client-sketches flex is-row">
+          <div>
+            <img src="img/assets/bird-nerd-1.jpg" alt="fill this out">
+          </div>
+          <div>
+            <img src="img/assets/bird-nerd-2.jpg" alt="fill this out">
+          </div>
+          <div>
+            <img src="img/assets/bird-nerd-3.jpg" alt="fill this out">
+          </div>
+          <div>
+            <img src="img/assets/bird-nerd-4.jpg" alt="fill this out">
+          </div>
+          <div>
+            <img src="img/assets/bird-nerd-5.jpg" alt="fill this out">
+          </div>
+      </article>
           <h6>(Early sketches provided by team at MPI)</h6> 
-        </div>
+      </div>
+    </section> <!-- .scope -->
 
-        <div class="wireframes">
-          <article class="wireframes-text">
-            <h2>Wireframing</h2>
-            <p>For this case study I choose to develop one user story, On-boarding. A website wireframe, also known as a page schematic or screen blueprint, is a visual guide that represents the skeletal framework of a website. :166. Wireframes are created for the purpose of arranging elements to best accomplish a particular purpose.</p>
+    <section class="wireframes flex align-center">
+      <div class="wireframes-container section-container">
+
+        <article class="wireframes-text">
+          <h2>Wireframing</h2>
+          <p>For this case study I choose to develop one user story, On-boarding. A website wireframe, also known as a page schematic or screen blueprint, is a visual guide that represents the skeletal framework of a website. :166. Wireframes are created for the purpose of arranging elements to best accomplish a particular purpose.</p>
+        </article>
+
+        <div class="pen-paper-wireframes">
+          <article>
+          <h3>Pen and paper</h3>
+          <p>Based on the sketches I received from the stakeholders, I spent approx an hour producing my own wireframes. Below show my initial sketches</p>
           </article>
+          <div>
+            <img src="img/wireframe-sketches.jpg" alt="fill this out">
+          </div>
         </div>
-
-        <div class="pen-paper-sketches">
-            <article>
-              <h3>Pen and paper</h3>
-              <p>Based on the sketches I received from the stakeholders, I spent approx an hour producing my own wireframes. Below show my initial sketches</p>
-            </article>
-            <div>
-              <img src="img/wireframe-sketches.jpg" alt="fill this out">
-            </div>
-        </div>  
 
         <div class="sketch-wireframes">
           <article>
-            <h3>Using Sketch app to produce higher fidelity</h3>
-            <p>Once I got a general idea of what elements were needed for this prototype, I then moved the wireframing into SKETCH for more precise wireframing to help communicate more complex interactions and flows. Sketch UI kits allowed me quickly produce vector based wireframe which I could then easily share and receive feedback.</p>
+          <h3>Using Sketch app to produce higher fidelity</h3>
+          <p>Once I got a general idea of what elements were needed for this prototype, I then moved the wireframing into SKETCH for more precise wireframing to help communicate more complex interactions and flows. Sketch UI kits allowed me quickly produce vector based wireframe which I could then easily share and receive feedback.</p>
           </article>
-          <article class="flex is-row space-between">
+            <article class="flex is-row space-between">
             <div>
-              <img src="img/assets/wireframe/landing.png" alt="fill this out">
+            <img src="img/assets/wireframe/landing.png" alt="fill this out">
             </div>
             <div>
-              <img src="img/assets/wireframe/welcome.png" alt="fill this out">
+            <img src="img/assets/wireframe/welcome.png" alt="fill this out">
             </div>
             <div>
-              <img src="img/assets/wireframe/signin.png" alt="fill this out">
+            <img src="img/assets/wireframe/signin.png" alt="fill this out">
             </div>
             <div>
-              <img src="img/assets/wireframe/signup.png" alt="fill this out">
+            <img src="img/assets/wireframe/signup.png" alt="fill this out">
             </div>
           </article>
           <h6>(Wireframes done with sketch app)</h6> 
         </div>
-      </div> <!-- .secction-container -->
 
-      <div class="mockups flex align-center">
-        <div class="section-container">
-          <div class="interations flex is-row align-center">
-            <article class="interation-text is-half">
-              <h2>MOCKUPS</h2>
-              <p>Using a combination of sketch and photoshop, the wireframes were then converted into high-fidelity mockups with color, typography and other visual elements.</p>
-              <h5>Iteration and experimentation</h5>
-              <p>Utilising Sketch’s artboard feature, I was able to quickly iterate and experiment with many different design variations.</p>
-            </article>
-            <aside class="is-half">
-              <img src="img/assets/interation-concepts.jpg" alt="screen shots of design concepts">
-            </aside>
+      </div> 
+    </section> <!-- .wireframes -->
+
+    <section class="mockup flex align-center">
+      <div class="mockup-container section-container flex align-center is-row">
+        <article class="mockup-text is-half">
+          <h2>MOCKUPS</h2>
+          <p>Using a combination of sketch and photoshop, the wireframes were then converted into high-fidelity mockups with color, typography and other visual elements.</p>
+          <h5>Iteration and experimentation</h5>
+          <p>Utilising Sketch’s artboard feature, I was able to quickly iterate and experiment with many different design variations.</p>
+        </article>
+        <aside class="is-half">
+          <img src="img/assets/interation-concepts.jpg" alt="screen shots of design concepts">
+        </aside>
+      </div>    
+    </section> <!-- .mockup -->
+
+    <section class="final-prototype flex align-center">
+      <div class="final-prototype-container section-container">
+        <article>
+          <h2>Final Mockup</h2>
+          <p>Talk about why you choose a single color rather or why you went for that design. Another thing to think about is location. Talk about where that app is being used. If someone is in a forest surrounded by green, what would be a color that would stand out or compliment it? Secondly should the background change to say an image of a forest when the use returns to there home? </p>
+        </article>
+        <article class="final-prototype-screens flex is-row space-between">
+          <div>
+          <img src="img/loading-iphone.png" alt="fill this out">
           </div>
-        </div>    
+          <div>
+          <img src="img/welcome-iphone.png" alt="fill this out">
+          </div>
+          <div>
+          <img src="img/signin-iphone.png" alt="fill this out">
+          </div>
+          <div>
+          <img src="img/signup-iphone.png" alt="fill this out">
+          </div>
+        </article>
       </div>
-       
-      <div class="final-prototype flex align-center">
-        <div class="section-container">
-          <article>
-            <h2>Final Mockup</h2>
-            <p>Talk about why you choose a single color rather or why you went for that design. Another thing to think about is location. Talk about where that app is being used. If someone is in a forest surrounded by green, what would be a color that would stand out or compliment it? Secondly should the background change to say an image of a forest when the use returns to there home? </p>
-          </article>
-          <article class="final-prototype-screens flex is-row space-between">
-            <div>
-              <img src="img/loading-iphone.png" alt="fill this out">
-            </div>
-            <div>
-              <img src="img/welcome-iphone.png" alt="fill this out">
-            </div>
-            <div>
-              <img src="img/signin-iphone.png" alt="fill this out">
-            </div>
-            <div>
-              <img src="img/signup-iphone.png" alt="fill this out">
-            </div>
-          </article>
-        </div>    
-      </div>
+    </section> <!-- .final prototype -->
 
-    </section>  <!-- .prototype-process -->
+    <section class="framer flex align-center">
+      <div class="framer-container section-container flex align-center is-row">
+        <article class="framer-text is-half">
+          <h2>Framer</h2>
+          <p>Using a combination of sketch and photoshop, the wireframes were then converted into high-fidelity mockups with color, typography and other visual elements.</p>
+          <h5>Iteration and experimentation</h5>
+          <p>Utilising Sketch’s artboard feature, I was able to quickly iterate and experiment with many different design variations.</p>
+        </article>
+        <aside class="is-half">
+          <img src="img/loading-iphone-large.png" alt="Framer mockup iphone">
+        </aside>
+      </div>    
+    </section> <!-- .framer -->
 
   </main> <!-- end of main-wrapper -->
 
