--- a/prototype.html
+++ b/prototype.html
@@ -63,29 +63,26 @@
         </aside>
       </div>
     </nav> <!-- .fp-nav-wrapper -->
-    
+
   </div> <!-- .main-header & navigation -->
 
   <main class="prototype-main-wrapper">
 
     <section class="prototype-intro-wrapper fullpage-section flex align-center justify-center">
-      <div class="section-container">
-        <div class="prototype-case-study flex is-row align-center space-between">
-          <article class="intro-text is-two-thirds">
+        <div class="prototype-case-study section-container flex space-between">
+          <article class="intro-text flex justify-center">
             <h1>Bird Nerd</h1>
             <p><span>Y / </span>2016</p>
-            <p><span>TYPE / </span>Personal Project + Proof of concept</p>
+            <p><span>TYPE / </span>Personal Project</p>
             <p><span>SERVICES / </span>UX/UI + PROTOTYPE</p>
-            <div class="rect-line"></div>
             <p class="prototype-body-text">
-              Young leaders is a programme sponsored by the Ministry of Primary Industries. It encourages internal staff to submit ideas in areas of technology and design. Bird Nerd  was an idea pitched by a small team. The small team need some concepts and prototypes to pitch. 
+              Young leaders is a programme sponsored by the Ministry of Primary Industries. It encourages internal staff to submit ideas in areas of technology and design. Bird Nerd  was an idea pitched by a small team.
             </p>
           </article>  
           <div class="welcome-iphone">
             <img src="img/loading-iphone.png" alt="welcome page of Bird Nerd app">
           </div>
         </div> 
-      </div>
     </section> <!-- .prototype-intro-wrapper -->
 
     <section class="process flex align-center">
