add prototype watermark design to background

--- a/prototype.html
+++ b/prototype.html
@@ -69,26 +69,29 @@
   <main class="prototype-main-wrapper">
 
     <section class="prototype-intro-wrapper fullpage-section flex align-center justify-center">
-        <div class="prototype-case-study section-container flex space-between">
-          <article class="intro-text flex justify-center">
-            <h1>Bird Nerd</h1>
-            <p><span>Y / </span>2016</p>
-            <p><span>TYPE / </span>Personal Project</p>
-            <p><span>SERVICES / </span>UX/UI + PROTOTYPE</p>
-            <p class="prototype-body-text">
-              Young leaders is a programme sponsored by the Ministry of Primary Industries. It encourages internal staff to submit ideas in areas of technology and design. Bird Nerd  was an idea pitched by a small team.
-            </p>
-          </article>  
-          <div class="welcome-iphone">
-            <img src="img/loading-iphone.png" alt="welcome page of Bird Nerd app">
-          </div>
-        </div> 
+      <div class="prototype-watermark">
+        <img src="img/prototype-text-logo.svg" alt="background watermark">
+      </div>
+      <div class="prototype-case-study section-container flex space-between">
+        <article class="intro-text flex justify-center">
+          <h1>Bird Nerd</h1>
+          <p><span>Y / </span>2016</p>
+          <p><span>TYPE / </span>Personal Project</p>
+          <p><span>SERVICES / </span>UX/UI + PROTOTYPE</p>
+          <p class="prototype-body-text">
+            Young leaders is a programme sponsored by the Ministry of Primary Industries. It encourages internal staff to submit ideas in areas of technology and design. Bird Nerd  was an idea pitched by a small team.
+          </p>
+        </article>  
+        <div class="welcome-iphone">
+          <img src="img/loading-iphone.png" alt="welcome page of Bird Nerd app">
+        </div>
+      </div> 
     </section> <!-- .prototype-intro-wrapper -->
 
     <section class="process flex align-center">
       <div class="process-container section-container flex is-row space-between align-center">
         <article class="process-text is-half">
-          <h1>Process</h1>
+          <h2>Process</h2>
           <p>We talk to your team and consumers, research competitors and learn everything about the market. We then take your brand's unique position in the market and craft a story around it to enable awesome design.</p>
         </article>
       </div>
