--- a/prototype.html
+++ b/prototype.html
@@ -88,7 +88,7 @@
       </div> 
     </section> <!-- .prototype-intro-wrapper -->
 
-    <section class="process flex align-center">
+    <section class="process fullpage-section flex align-center">
       <div class="process-container section-container flex is-row space-between align-center">
         <article class="process-text is-half">
           <h2>Process</h2>
@@ -119,8 +119,11 @@
           <div>
             <img src="img/assets/bird-nerd-5.jpg" alt="fill this out">
           </div>
-      </article>
-          <h6>(Early sketches provided by team at MPI)</h6> 
+          <div>
+            <img src="img/assets/bird-nerd-6.jpg" alt="fill this out">
+          </div>
+        </article>
+          <h5>(Early sketches provided by team at MPI)</h5> 
       </div>
     </section> <!-- .scope -->
 
@@ -142,22 +145,22 @@
           </div>
         </div>
 
-        <div class="sketch-wireframes">
+        <div class="sketch-wireframes flex">
           <article>
-          <h3>Using Sketch app to produce higher fidelity</h3>
-          <p>Once I got a general idea of what elements were needed for this prototype, I then moved the wireframing into SKETCH for more precise wireframing to help communicate more complex interactions and flows. Sketch UI kits allowed me quickly produce vector based wireframe which I could then easily share and receive feedback.</p>
+            <h3>Using Sketch app to produce higher fidelity</h3>
+            <p>Once I got a general idea of what elements were needed for this prototype, I then moved the wireframing into SKETCH for more precise wireframing to help communicate more complex interactions and flows. Sketch UI kits allowed me quickly produce vector based wireframe which I could then easily share and receive feedback.</p>
           </article>
-            <article class="flex is-row space-between">
-            <div>
+          <article class="flex is-row flex-wrap space-between">
+            <div class="wireframe-item">
             <img src="img/assets/wireframe/landing.png" alt="fill this out">
             </div>
-            <div>
+            <div class="wireframe-item">
             <img src="img/assets/wireframe/welcome.png" alt="fill this out">
             </div>
-            <div>
+            <div class="wireframe-item">
             <img src="img/assets/wireframe/signin.png" alt="fill this out">
             </div>
-            <div>
+            <div class="wireframe-item">
             <img src="img/assets/wireframe/signup.png" alt="fill this out">
             </div>
           </article>
