--- a/prototype.html
+++ b/prototype.html
@@ -103,24 +103,18 @@
           <h2>Scoping</h2>
           <p>Using sound recognition technology, bird nerd is an app that helps users identify native New Zealand birds while out in the forest. Bird Nerd also allows users to tag and share their location and add birds to their personal collection. The app would generally be targeted towards bird enthusiast but also needed to appeal other target groups. The team at MPI needed a prototype to present to.</p>
         </article>
-        <article class="client-sketches flex is-row">
-          <div>
+        <article class="client-sketches flex is-row space-between">
+          <div class="client-sketch-item">
             <img src="img/assets/bird-nerd-1.jpg" alt="fill this out">
           </div>
-          <div>
+          <div class="client-sketch-item">
             <img src="img/assets/bird-nerd-2.jpg" alt="fill this out">
           </div>
-          <div>
+          <div class="client-sketch-item">
             <img src="img/assets/bird-nerd-3.jpg" alt="fill this out">
           </div>
-          <div>
+          <div class="client-sketch-item">
             <img src="img/assets/bird-nerd-4.jpg" alt="fill this out">
-          </div>
-          <div>
-            <img src="img/assets/bird-nerd-5.jpg" alt="fill this out">
-          </div>
-          <div>
-            <img src="img/assets/bird-nerd-6.jpg" alt="fill this out">
           </div>
         </article>
           <h5>(Early sketches provided by team at MPI)</h5> 
@@ -150,7 +144,7 @@
             <h3>Using Sketch app to produce higher fidelity</h3>
             <p>Once I got a general idea of what elements were needed for this prototype, I then moved the wireframing into SKETCH for more precise wireframing to help communicate more complex interactions and flows. Sketch UI kits allowed me quickly produce vector based wireframe which I could then easily share and receive feedback.</p>
           </article>
-          <article class="flex is-row flex-wrap space-between">
+          <article class="flex is-row space-between">
             <div class="wireframe-item">
             <img src="img/assets/wireframe/landing.png" alt="fill this out">
             </div>
