continue adding responsive flexbox

--- a/prototype.html
+++ b/prototype.html
@@ -165,14 +165,14 @@
     </section> <!-- .wireframes -->
 
     <section class="mockup flex align-center">
-      <div class="mockup-container section-container flex align-center is-row">
-        <article class="mockup-text is-half">
-          <h2>MOCKUPS</h2>
-          <p>Using a combination of sketch and photoshop, the wireframes were then converted into high-fidelity mockups with color, typography and other visual elements.</p>
-          <h5>Iteration and experimentation</h5>
-          <p>Utilising Sketch’s artboard feature, I was able to quickly iterate and experiment with many different design variations.</p>
+      <div class="mockup-container section-container flex align-center space-between">
+        <article class="mockup-text">
+          <h2>Mockups and designs</h2>
+          <p>Using a combination of sketch and photoshop, the wireframes were then converted into high-fidelity mockups with color, typography and other visual elements. Talk about the process of going from a detailed design to a more minimal design.</p>
+          <h3>Iteration and experimentation</h3>
+          <p>Utilising Sketch’s artboard feature, I was able to quickly iterate and experiment with many different design variations. Talk about the lean agile etc...</p>
         </article>
-        <aside class="is-half">
+        <aside class="mockup-screens">
           <img src="img/assets/interation-concepts.jpg" alt="screen shots of design concepts">
         </aside>
       </div>    
