--- a/prototype.html
+++ b/prototype.html
@@ -88,9 +88,9 @@
       </div> 
     </section> <!-- .prototype-intro-wrapper -->
 
-    <section class="process fullpage-section flex align-center">
+    <section class="process flex align-center">
       <div class="process-container section-container flex is-row space-between align-center">
-        <article class="process-text is-half">
+        <article class="process-text">
           <h2>Process</h2>
           <p>We talk to your team and consumers, research competitors and learn everything about the market. We then take your brand's unique position in the market and craft a story around it to enable awesome design.</p>
         </article>
@@ -181,7 +181,7 @@
     <section class="final-prototype flex align-center">
       <div class="final-prototype-container section-container">
         <article>
-          <h2>Final Mockup</h2>
+          <h2>Final Prototype</h2>
           <p>Talk about why you choose a single color rather or why you went for that design. Another thing to think about is location. Talk about where that app is being used. If someone is in a forest surrounded by green, what would be a color that would stand out or compliment it? Secondly should the background change to say an image of a forest when the use returns to there home? </p>
         </article>
         <article class="final-prototype-screens flex is-row space-between">
@@ -201,19 +201,29 @@
       </div>
     </section> <!-- .final prototype -->
 
-    <section class="framer flex align-center">
-      <div class="framer-container section-container flex align-center is-row">
-        <article class="framer-text is-half">
-          <h2>Framer</h2>
+    <section class="framer flex align-center justify-center">
+      <div class="framer-container section-container flex">
+        <article class="framer-text">
+          <h2>Interactive prototypes with Framer</h2>
           <p>Using a combination of sketch and photoshop, the wireframes were then converted into high-fidelity mockups with color, typography and other visual elements.</p>
-          <h5>Iteration and experimentation</h5>
-          <p>Utilising Sketch’s artboard feature, I was able to quickly iterate and experiment with many different design variations.</p>
+          <h3>Iteration and experimentation</h3>
+          <p>Talk about your decisions for using famer and what were the advantages. Also talk about other tools like proto, invision and UXpin</p>
+          <a href="prototype.html"><button class="btn">test prototype</button></a>
         </article>
-        <aside class="is-half">
+        <aside>
           <img src="img/loading-iphone-large.png" alt="Framer mockup iphone">
         </aside>
       </div>    
     </section> <!-- .framer -->
+
+    <footer class="footer">
+      <div class="social-footer">
+        <a target="_blank" class="contact-item" href="mailto:rathanap@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
+        <a target="_blank" class="contact-item" href="https://github.com/rath-prak"><i class="fa fa-github" aria-hidden="true"></i></a>
+        <a target="_blank" class="contact-item" href="https://twitter.com/rathpnz"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+        <a target="_blank" class="contact-item" href="https://nz.linkedin.com/in/rath-prak-97761a40"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+      </div>
+    </footer>
 
   </main> <!-- end of main-wrapper -->
 
