add sticky navigation on prototype page

--- a/prototype.html
+++ b/prototype.html
@@ -31,13 +31,14 @@
 
   <div class="main-header">
 
+  <div class="secondary-nav">
+    <div class="sticky-nav-bar"></div> 
     <figure class="logo red-logo active-logo">
       <a href="./#home"><img src="img/salmon-logo.svg" alt="salmon logo"></a>
     </figure>
     <figure class="logo white-logo">
       <a href="./#home"><img src="img/salmon-logo-white.svg" alt="salmon white logo"></a>
     </figure>
-
 
     <div class="navbar-toggle">
       <div class="hamburger-container">
@@ -46,6 +47,8 @@
         <div class="menu-bar"></div>
       </div>
     </div> <!-- .navbar-toggle / hamburger menu -->
+  </div>  
+ 
 
     <nav class="fp-nav-wrapper flex is-row justify-start">
       <div class="menu-container flex is-row">
@@ -202,7 +205,7 @@
     </section> <!-- .final prototype -->
 
     <section class="framer flex align-center justify-center">
-      <div class="framer-container section-container flex">
+      <div class="framer-container section-container align-center flex">
         <article class="framer-text">
           <h2>Interactive prototypes with Framer</h2>
           <p>Using a combination of sketch and photoshop, the wireframes were then converted into high-fidelity mockups with color, typography and other visual elements.</p>
@@ -218,6 +221,7 @@
 
     <footer class="footer">
       <div class="social-footer">
+        <p class="copy-right">&copy; Rayfinn Digital</p>
         <a target="_blank" class="contact-item" href="mailto:rathanap@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
         <a target="_blank" class="contact-item" href="https://github.com/rath-prak"><i class="fa fa-github" aria-hidden="true"></i></a>
         <a target="_blank" class="contact-item" href="https://twitter.com/rathpnz"><i class="fa fa-twitter" aria-hidden="true"></i></a>
