finish slide down header

--- a/prototype.html
+++ b/prototype.html
@@ -22,17 +22,16 @@
       <![endif]-->
 
   <!-- <div id="transition-container"></div> -->
-<!--   <div class="spinner-wrapper">
+  <div class="spinner-wrapper">
     <div class="spinner">
       <div class="dot1"></div>
       <div class="dot2"></div>
     </div>
-  </div> -->
+  </div>
 
   <div class="main-header">
 
   <div class="secondary-nav">
-    <div class="sticky-nav-bar"></div> 
     <figure class="logo red-logo active-logo">
       <a href="./#home"><img src="img/salmon-logo.svg" alt="salmon logo"></a>
     </figure>
@@ -49,14 +48,13 @@
     </div> <!-- .navbar-toggle / hamburger menu -->
   </div>  
  
-
     <nav class="fp-nav-wrapper flex is-row justify-start">
       <div class="menu-container flex is-row">
         <div class="nav-content is-half">
           <ul class="menu-list-items">
             <li data-menuanchor="home" class="active"><a href="./#home">rayfinn</a></li>
             <li data-menuanchor="about-me"><a href="./#about-me">about</a></li>
-            <li data-menuanchor="prototype"><a href="./#prototype">prototype</a></li>
+            <li data-menuanchor="prototype"><a href="prototype.html">prototype</a></li>
             <li data-menuanchor="interaction"><a href="./#interaction">interaction</a></li>
             <li data-menuanchor="photography"><a href="./#photography">photography</a></li>
           </ul>
@@ -64,6 +62,9 @@
         <aside class="nav-content-text flex is-half justify-center">
           <p>Hello and welcome to my website. Im an interactive designer and front end developer based in Wellington whah whah</p>
         </aside>
+        <div class="back-button">
+          <p>click-back</p>
+        </div>
       </div>
     </nav> <!-- .fp-nav-wrapper -->
 
