--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <ul class="menu-list-items">
           <li data-menuanchor="home" class="active"><a href="#home">rayfinn</a></li>
           <li data-menuanchor="about-me"><a href="#about-me">about</a></li>
-          <li data-menuanchor="prototype"><a href="#prototype">prototype</a></li>
+          <li data-menuanchor="prototype"><a href="prototype.html">prototype</a></li>
           <li data-menuanchor="interaction"><a href="#interaction">interaction</a></li>
           <li data-menuanchor="photography"><a href="#photography">photography</a></li>
         </ul>
@@ -180,7 +180,6 @@
 <!-- -->  <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.8.6/jquery.fullPage.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/vivus/0.3.1/vivus.min.js"></script>
   <!-- <script src="data/data.js"></script> -->
-  <script src="js/vendor/granim.min.js"></script>
   <script src="js/vendor/bodymovin.js"></script>
   <script src="js/main.js"></script>
 
