setup user-interface.html

--- a/user-interface.html
+++ b/user-interface.html
@@ -79,18 +79,18 @@
 
   </div> <!-- .main-header & navigation -->
 
-  <main class="prototype-main-wrapper">
+  <main class="ui-main-wrapper">
 
-    <section class="prototype-intro-wrapper fullpage-section flex align-center justify-center">
-      <div class="prototype-watermark">
-        <img src="img/prototype-text-logo.svg" alt="background watermark">
+    <section class="ui-intro-wrapper fullpage-section flex align-center justify-center">
+      <div class="ui-watermark">
+        <img src="img/user-interface-text-logo.svg" alt="background watermark">
       </div>
-      <div class="prototype-case-study section-container flex space-between">
+      <div class="ui-case-study section-container flex space-between">
         <article class="intro-text flex justify-center">
-          <h1>Bird Nerd</h1>
+          <h1>Tandem</h1>
           <p><span>Y / </span>2016</p>
-          <p><span>TYPE / </span>Personal Project</p>
-          <p><span>SERVICES / </span>UX/UI + PROTOTYPE</p>
+          <p><span>TYPE / </span>Group Project</p>
+          <p><span>SERVICES / </span>UI / Front end</p>
           <p class="prototype-body-text">
             Young leaders is a programme sponsored by the Ministry of Primary Industries. It encourages internal staff to submit ideas in areas of technology and design. Bird Nerd  was an idea pitched by a small team.
           </p>
