--- a/index.html
+++ b/index.html
@@ -57,14 +57,25 @@
           <li data-menuanchor="home" class="active"><a href="#home">rayfinn</a></li>
           <li data-menuanchor="about-me"><a href="#about-me">about</a></li>
           <li data-menuanchor="prototype"><a href="prototype.html">prototype</a></li>
-          <li data-menuanchor="interaction"><a href="#interaction">interaction</a></li>
+          <li data-menuanchor="user-interface"><a href="#interaction">user interface</a></li>
           <li data-menuanchor="photography"><a href="#photography">photography</a></li>
         </ul>
       </div>
 
+    <div class="social-main">
+      <a target="_blank" class="contact-item" href="mailto:rathanap@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
+      <a target="_blank" class="contact-item" href="https://github.com/rath-prak"><i class="fa fa-github" aria-hidden="true"></i></a>
+      <a target="_blank" class="contact-item" href="https://twitter.com/rathpnz"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+      <a target="_blank" class="contact-item" href="https://nz.linkedin.com/in/rath-prak-97761a40"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+    </div>
+
       <aside class="nav-content-text flex is-half justify-center">
         <p>Hello and welcome to my website. Im an interactive designer and front end developer based in Wellington whah whah</p>
       </aside>
+
+      <div class="nav-back-button">
+        <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+      </div>
 
     </div>
   </nav> <!-- .fp-nav-wrapper -->
@@ -103,21 +114,6 @@
 
     <div class="section about-me flex align-center">
        <div class="wrapper-container flex align-center justify-center">
-<!--         <div class="rayfinn-logo-wrapper">
-          <svg version="1.1" id="rayfinn-logo" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 300 61" style="enable-background:new 0 0 300 61;" xml:space="preserve">
-          <g>
-            <path class="st0" d="M30.6,55.3L19,39.1h-0.1v16.3H6.6V5h15.9C27.8,5,33.6,5.1,38,8.6c4.1,3.3,6.2,8.5,6.2,13.7
-              c0,7.8-4.6,14.6-12.5,15.8l13.7,17.1H30.6z M23.6,16.3h-4.7v14h4.6c4.8,0,8.4-2,8.4-7.2C31.8,18.1,28,16.3,23.6,16.3z"/>
-            <path class="st0" d="M83.4,55.3L80.9,48H63.5l-2.7,7.3H47L67.2,5h10.1l20,50.3H83.4z M72.4,20.6L72.4,20.6h-0.2L67,37.8h10.5
-              L72.4,20.6z"/>
-            <path class="st0" d="M121,37v18.3h-12.9V37l-15-32h13.9l7.5,20.2L122.1,5h13.8L121,37z"/>
-            <path class="st0" d="M153.4,16.3v8.6H168v11.3h-14.6v19.2h-12.3V5h27.5v11.3H153.4z"/>
-            <path class="st0" d="M175.5,55.3V5h12.9v50.3H175.5z"/>
-            <path class="st0" d="M228.7,55.3l-19.2-30.6l-0.1,0.1l0.3,30.5h-12.3V5h11.1L228,36.6l0.1-0.1L227.6,5h12.3v50.3H228.7z"/>
-            <path class="st0" d="M280.3,55.3l-19.2-30.6l-0.1,0.1l0.3,30.5H249V5h11.1l19.4,31.6l0.1-0.1L279.2,5h12.3v50.3H280.3z"/>
-          </g>
-        </svg>
-        </div> -->
         <h1>Wellington based digital designer and front end developer</h1>
         <ul class="skills space-between">
           <li class="skill-item">design</li>
@@ -149,15 +145,15 @@
       </div>
     </div> <!-- .section user-interface -->
 
-    <div class="section interaction">
-      <div class="interaction-container flex justify-center is-row">
+    <div class="section ui">
+      <div class="ui-container flex justify-center is-row">
         <div class="wrapper-container flex justify-center align-center is-row">
           <article>
-            <h3 class="fadetext-interaction">Interaction Design</h3>
-            <p class="quote-text fadetext-interaction">“Talk about how important micro-interactions are to UX design”
+            <h3 class="fadetext-ui">User Interface</h3>
+            <p class="quote-text fadetext-ui">“Talk about how important micro-interactions are to UX design”
             </p>
-            <p class="fadetext-interaction">Can talk about prototyping and adding/enhanceing use experience with microinteractions</p>
-            <button class="btn fadetext-interaction">view case study</button>
+            <p class="fadetext-ui">Can talk about prototyping and adding/enhanceing use experience with microinteractions</p>
+            <a href="user-interface.html"><button class="btn fadetext-ui">view case study</button></a>
           </article>
         </div>
       </div> 
