work on user-interface page

--- a/user-interface.html
+++ b/user-interface.html
@@ -88,15 +88,15 @@
       <div class="ui-case-study section-container flex space-between">
         <article class="intro-text flex justify-center">
           <h1>Tandem</h1>
-          <p><span>Y / </span>2016</p>
-          <p><span>TYPE / </span>Group Project</p>
-          <p><span>SERVICES / </span>UI / Front end</p>
-          <p class="prototype-body-text">
+          <p><span>Y / </span>2016 <span>  TYPE / </span>Group Project   <span>SERVICES / </span>UI / Front end</p>
+<!--           <p><span>TYPE / </span>Group Project</p>
+          <p><span>SERVICES / </span>UI / Front end</p> -->
+          <p class="ui-body-text">
             Young leaders is a programme sponsored by the Ministry of Primary Industries. It encourages internal staff to submit ideas in areas of technology and design. Bird Nerd  was an idea pitched by a small team.
           </p>
         </article>  
         <div class="welcome-iphone">
-          <img src="img/loading-iphone.png" alt="welcome page of Bird Nerd app">
+          <img src="img/tandem-landing.png" alt="welcome page of Bird Nerd app">
         </div>
       </div> 
     </section> <!-- .prototype-intro-wrapper -->
