start on resume page

--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
       <![endif]-->
 
   <!-- <div id="transition-container"></div> -->
-  <div class="spinner-wrapper">
+<!--   <div class="spinner-wrapper">
     <div class="spinner">
       <div class="dot1"></div>
       <div class="dot2"></div>
     </div>
-  </div>
+  </div> -->
 
   <div class="main-header">
 
@@ -57,8 +57,9 @@
           <li data-menuanchor="home" class="active"><a href="#home">rayfinn</a></li>
           <li data-menuanchor="about-me"><a href="#about-me">about</a></li>
           <li data-menuanchor="prototype"><a href="prototype.html">prototype</a></li>
-          <li data-menuanchor="user-interface"><a href="#interaction">user interface</a></li>
+          <li data-menuanchor="user-interface"><a href="#user-interface">user interface</a></li>
           <li data-menuanchor="photography"><a href="#photography">photography</a></li>
+          <li data-menuanchor="resume"><a href="#resume">resume</a></li>
         </ul>
       </div>
 
@@ -160,8 +161,64 @@
     </div> <!-- .section interaction --> 
    
     <div class="section photography">
-      <div class="container center-content">
+      <div class="center-content">
         <h1>photography content</h1>
+      </div>
+    </div> 
+
+    <div class="section resume flex justify-center is-row">
+      <div class="resume-wrapper">
+        <div class="wrapper-container flex justify-center align-center flex-wrap ">
+          <!-- <h1>hello</h1> -->
+          <section class="resume-body flex flex-wrap is-row space-between">
+            <div class="experience">
+              <h2>+ Work Experience</h2>
+              <article class="ex-sproutmedia">
+                <h4 class="work-placement"><span>2014 &ndash; PRESENT</span> | Sproutmedia | www.sproutmedia.co.nz</h4>
+                <p class="work-position">Co-founder</p>
+                <p class="work-description">Sproutmedia is a video production company that I started in 2013 which focused on video production for small to medium size businesses. My role was producer, designer and bla</p>
+                <ul class="work-duties">
+                  <li>Photography</li>
+                  <li>Project management</li>
+                  <li>Visual design</li>
+                  <li>Videography</li>
+                  <li>Post Production</li>
+                  </ul>
+              </article>
+              <article class="ex-tbd">
+                <h4 class="work-placement"><span>2008 &ndash; 2014</span> | TBD Design | www.tbd.co.nz</h4>
+                <p class="work-position">Graphic Designer</p>
+                <p class="work-description">TBD Design is a multi-disciplined design and production company. Our experienced team develop a wide range of brand communications covering brand identity, promotional material, advertising, publication design, packaging and web marketing solutions.</p>
+                <ul class="work-duties">
+                  <li>Branding, creative and corporate design</li>
+                  <li>Annual reports, Corporate documents and publications)</li>
+                  <li>Photo editing, retouching</li>
+                  <li>Web/digital, user interface</li>
+                  <li>Desktop publishing</li>
+                  <li>Project management</li>
+                  </ul>
+              </article> 
+              <article class="ex-capturegram">
+                <h4 class="work-placement"><span>2010 &ndash; PRESENT</span> | Capturegram Photograhy | www.captyuregram.co.nz</h4>
+                <p class="work-position">Co-founder, Photographer</p>
+                <p class="work-description">Photography studio specialising in beauty, fasion, sports and commercial</p>
+                <ul class="work-duties">
+                  <li>Branding, creative and corporate design</li>
+                  <li>Annual reports, Corporate documents and publications)</li>
+                  <li>Photo editing, retouching</li>
+                  <li>Web/digital, user interface</li>
+                  <li>Desktop publishing</li>
+                  </ul>
+              </article>  
+
+              
+
+            </div>
+            <div class="education">
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum nisi incidunt quibusdam, asperiores autem. Voluptatum enim velit vero reiciendis, ipsum incidunt voluptatibus. Dicta possimus quam numquam explicabo necessitatibus eaque porro.</p>
+            </div>
+          </section>  
+        </div>
       </div>
     </div> 
 
