--- a/prototype.html
+++ b/prototype.html
@@ -55,8 +55,9 @@
             <li data-menuanchor="home" class="active"><a href="./#home">rayfinn</a></li>
             <li data-menuanchor="about-me"><a href="./#about-me">about</a></li>
             <li data-menuanchor="prototype"><a href="prototype.html">prototype</a></li>
-            <li data-menuanchor="interaction"><a href="user-interface.html">user interface</a></li>
-            <li data-menuanchor="photography"><a href="./#photography">photography</a></li>
+            <li data-menuanchor="user-interface"><a href="user-interface.html">user interface</a></li>
+            <li data-menuanchor="design and photography"><a href="./#photography">photography</a></li>
+            <li data-menuanchor="resume"><a href="./#resume">resume</a></li>
           </ul>
         </div>
 
