--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
       <![endif]-->
 
   <!-- <div id="transition-container"></div> -->
-<!--   <div class="spinner-wrapper">
+  <div class="spinner-wrapper">
     <div class="spinner">
       <div class="dot1"></div>
       <div class="dot2"></div>
     </div>
-  </div> -->
+  </div>
 
   <div class="main-header">
 
@@ -195,7 +195,7 @@
                   <li>Photo editing, retouching</li>
                   <li>Web/digital, user interface</li>
                   <li>Desktop publishing</li>
-                  <li>Project management</li>
+                  <!-- <li>Project management</li> -->
                   </ul>
               </article> 
               <article class="ex-capturegram">
