setup browserify, modularise navigation main.js

--- a/index.html
+++ b/index.html
@@ -225,16 +225,13 @@
   </main> <!-- end of main section -->
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-  <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
+<!--   <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script> -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.5/TweenMax.min.js"></script>
-  <script src="js/vendor/fullpage.fadingEffect.min.js"></script>
-  <script src="js/vendor/fullpage.scrollHorizontally.min.js"></script>
+  <!-- <script src="js/vendor/fullpage.fadingEffect.min.js"></script> -->
+  <!-- <script src="js/vendor/fullpage.scrollHorizontally.min.js"></script> -->
   <script src="js/vendor/scrolloverflow.js"></script>
 <!-- -->  <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.8.6/jquery.fullPage.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/vivus/0.3.1/vivus.min.js"></script>
-  <!-- <script src="data/data.js"></script> -->
-  <script src="js/vendor/bodymovin.js"></script>
-  <script src="js/main.js"></script>
+  <script src="js/dist/main.js"></script>
 
   <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
   <script>
