refactor main.js

--- a/user-interface.html
+++ b/user-interface.html
@@ -57,7 +57,7 @@
             <li data-menuanchor="prototype"><a href="prototype.html">prototype</a></li>
             <li data-menuanchor="user-interface"><a href="user-interface.html">user interface</a></li>
             <li data-menuanchor="photography"><a href="./#photography">photography</a></li>
-            <li data-menuanchor="resume"><a href="./#resume">resume</a></li>
+            <li data-menuanchor="resume"><a href="resume.html">resume</a></li>
           </ul>
         </div>
 
@@ -243,10 +243,7 @@
   </main> <!-- end of main-wrapper -->
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-<!--   <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script> -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.5/TweenMax.min.js"></script>
-  <!-- <script src="js/vendor/fullpage.fadingEffect.min.js"></script> -->
-  <!-- <script src="js/vendor/fullpage.scrollHorizontally.min.js"></script> -->
   <script src="js/vendor/scrolloverflow.js"></script>
 <!-- -->  <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.8.6/jquery.fullPage.min.js"></script>
   <script src="js/dist/main.js"></script>
